<resources>
    <string name="app_name">Xoco</string>
    <string name="hint_nombre">Nombre del Taco</string>
    <string name="hint_marca">Taquería</string>
    <string name="hint_pais">País de origen</string>
    <string name="hint_tel">Teléfono de contacto</string>

    <string name="label_cacao">Nivel de Picante</string>
    <string name="label_presentacion">Tipo de Tortilla</string>
    <string name="label_tipo_cacao">Variedad de Carne</string>
    <string name="label_perfil_sabor">Perfil de Sabor</string>
    <string name="label_tipo">Categoría</string>
    <string name="label_peso">Porción</string>

    <string name="menu_nuevo">Nuevo Registro</string>
    <string name="menu_inventario">Inventario</string>
    <string name="menu_modificar">Modificar</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="menu_salir">Salir</string>
    <string name="menu_soporte">Soporte</string>
    <string name="menu_acerca_de">Acerca de</string>

    <string name="btn_ver_todo">Ver Inventario</string>
    <string name="btn_guardar">Guardar Datos</string>
    <string name="btn_eliminar">Eliminar Registro</string>
    <string name="btn_actualizar">Actualizar</string>
    <string name="btn_anterior">Anterior</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="btn_iniciar">Iniciar Sesión</string>
    <string name="btn_volver">Volver</string>

    <string name="label_usuario">Usuario</string>
    <string name="label_contrasena">Contraseña</string>

    <string-array name="presentacion">
        <item>Maíz</item>
        <item>Harina</item>
        <item>Azul</item>
        <item>Integral</item>
    </string-array>

    <string-array name="tipocacao">
        <item>Pastor</item>
        <item>Asada</item>
        <item>Carnitas</item>
        <item>Barbacoa</item>
        <item>Birria</item>
        <item>Suadero</item>
    </string-array>

    <string-array name="perfildesabor">
        <item>Picante</item>
        <item>Ahumado</item>
        <item>Salado</item>
        <item>Jugoso</item>
        <item>Especiado</item>
    </string-array>

    <string-array name="tipo">
        <item>Taco Tradicional</item>
        <item>Taco Gourmet</item>
        <item>Taco Vegano</item>
        <item>Taco de Mariscos</item>
        <item>Taco Regional</item>
    </string-array>

    <string-array name="peso">
        <item>1 Taco</item>
        <item>3 Tacos</item>
        <item>5 Tacos</item>
        <item>Orden Completa</item>
    </string-array>

</resources>