<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/opc1"
        android:title="@string/menu_nuevo" />

    <item
        android:id="@+id/opc2"
        android:title="@string/menu_inventario"/>

    <item
        android:id="@+id/opc3"
        android:title="@string/menu_modificar"/>

    <item
        android:id="@+id/opc4"
        android:icon="@drawable/borrar"
        android:title="@string/menu_eliminar"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/opc5"
        android:icon="@drawable/cerrar2"
        android:title="@string/menu_salir"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/opc6"
        android:title="@string/menu_soporte" />

    <item
        android:id="@+id/opc7"
        android:title="@string/menu_acerca_de" />
</menu>